--- a/react/baseInfoAboutReact/10-react哲学/example.html
+++ b/react/baseInfoAboutReact/10-react哲学/example.html
@@ -161,7 +161,7 @@
         render() {
             return (
                 <div>
-                    <SearchBar filterText={this.state.filterText} inStockOnly={this.state.inStockOnly} onFilterTextChange={this.handleFilterTextChange} onInStockChange={this.onInStockChange}/>
+                    <SearchBar filterText={this.state.filterText} inStockOnly={this.state.inStockOnly} onFilterTextChange={this.handleFilterTextChange} onInStockChange={this.handleInStockChange}/>
                     <ProductTable products={this.props.products} filterText={this.state.filterText} inStockOnly={this.state.inStockOnly} />
                 </div>
             )
